added put and delete route, error handeling, and validation
