# swagger.json
@@ -1,33 +1,19 @@
 {
   "swagger": "2.0",
   "info": {
-    "description": "This is my project for sce 341",
-    "version": "1.0.0",
-    "title": "W05-8 project"
+    "title": "My API",
+    "description": "Description",
+    "version": "1.0.0"
   },
-  "host": "cse341-wedding-project.herokuapp.com/",
+  "host": "localhost:8080",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "guest",
-      "description": "working with the guest collection"
-    },
-    {
-      "name": "user",
-      "description": "working with the user collection"
-    }
-  ],
   "schemes": [
-    "https",
     "http"
   ],
   "paths": {
-    "/guest/": {
+    "/user/": {
       "get": {
-        "tag": [
-          "guest"
-        ],
-        "description": "get all guests",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -37,39 +23,64 @@
             "description": "OK"
           }
         }
+      }
+    },
+    "/guest/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       },
       "post": {
-        "tag": [
-          "guest"
-        ],
-        "description": "create new guest",
-        "parameters": {
-          "name": "body",
-          "in": "body",
-          "schema": {
-            "type": "object",
-            "properties": {
-              "firstName": {
-                "example": "any"
-              },
-              "lastName": {
-                "example": "any"
-              },
-              "invitationSent": "any",
-              "invitedToCeremony": "any",
-              "foodAllergies": {
-                "dairy": "any",
-                "gluten": "any",
-                "other": "any"
-              },
-              "address": "any",
-              "role": "any"
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "invitationSent": {
+                  "example": "any"
+                },
+                "invitedToCeremony": {
+                  "example": "any"
+                },
+                "foodAllergies": {
+                  "example": "any"
+                },
+                "address": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
             }
           }
-        },
+        ],
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -79,10 +90,7 @@
     },
     "/guest/{id}": {
       "get": {
-        "tag": [
-          "guest"
-        ],
-        "description": "get single guest by id",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -97,96 +105,81 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/user/": {
-      "get": {
-        "tag": [
-          "guest"
-        ],
-        "description": "get all guests",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    }
-  },
-  "securityDefinitions": {
-    "user_auth": {
-      "type": "oauth2",
-      "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
-      "flow": "implicit",
-      "scopes": {
-        "write:guest": "modify guests in your account",
-        "read:guest": "read your guests"
-      }
-    },
-    "api_key": {
-      "type": "apiKey",
-      "name": "api_key",
-      "in": "header"
-    }
-  },
-  "definitions": {
-    "user": {
-      "type": "object",
-      "properties": {
-        "username": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string"
-        },
-        "isBride": {
-          "type": "boolean"
-        }
-      }
-    },
-    "guest": {
-      "type": "object",
-      "properties": {
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
-        "invitationSent": {
-          "type": "boolean"
-        },
-        "invitedToCeremony": {
-          "type": "boolean"
-        },
-        "foodAllergies": {
-          "type": "object",
-          "properties": {
-            "dairy": {
-              "type": "boolean"
-            },
-            "gluten": {
-              "type": "boolean"
-            },
-            "other": {
-              "type": "string"
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "invitationSent": {
+                  "example": "any"
+                },
+                "invitedToCeremony": {
+                  "example": "any"
+                },
+                "foodAllergies": {
+                  "example": "any"
+                },
+                "address": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
             }
           }
-        },
-        "address": {
-          "type": "string"
-        },
-        "role": {
-          "type": "string"
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       }
     }
